<resources>
    <string name="app_name">Ward No 51</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="district_name">District Name</string>
    <string name="ward_no">Ward No</string>
    <string name="booth_no">Booth No</string>
    <string name="person_name">Person Name</string>
    <string name="mobile_no_1">Mobile No 1</string>
    <string name="mobile_no_2">Mobile No 2</string>
    <string name="karykrta">Karykrta/Aam Nagrik</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit Data</string>

</resources>
